# Space-Invaders-Pygame

./: pyproject.toml
.github/workflows/: ci.yaml
.github/workflows /: ciic.yaml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
