[tool.poetry]
name = "space-invaders-pygame"
version = "0.1.0"
description = ""
authors = ["Ksu <34626@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
